[metadata]
name = pysecanalyzer
summary = Security oriented static analyser for python code.
description-file =
    README.rst
author = Murthy
author-email = code-quality@gmail.com
home-page = https://pyanalyzer.readthedocs.io/en/latest/
license = Apache-2.0 license
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
project_urls =
    Release notes = https://github.com/PyCQA/pyanalyzer/releases

[entry_points]
console_scripts =
    pysecanalyzer = pysecanalyzer.cli.main:main
    pysecanalyzer-config-generator = pysecanalyzer.cli.config_generator:main
    pysecanalyzer-baseline = pysecanalyzer.cli.baseline:main
pysecanalyzer.blacklists =
    calls = pysecanalyzer.blacklists.calls:gen_blacklist
    imports = pysecanalyzer.blacklists.imports:gen_blacklist
pysecanalyzer.srcformatters =
    csv = pysecanalyzer.srcformatters.csv:report
    json = pysecanalyzer.srcformatters.json:report
    txt = pysecanalyzer.srcformatters.text:report
    xml = pysecanalyzer.srcformatters.xml:report
    html = pysecanalyzer.srcformatters.html:report
    screen = pysecanalyzer.srcformatters.screen:report
    yaml = pysecanalyzer.srcformatters.yaml:report
    custom = pysecanalyzer.srcformatters.custom:report
pysecanalyzer.srcplugins =
    # pysecanalyzer/srcplugins/app_debug.py
    flask_debug_true = pysecanalyzer.srcplugins.app_debug:flask_debug_true

    # pysecanalyzer/srcplugins/asserts.py
    assert_used = pysecanalyzer.srcplugins.asserts:assert_used

    # pysecanalyzer/srcplugins/general_hardcoded_password.py
    hardcoded_password_string = pysecanalyzer.srcplugins.general_hardcoded_password:hardcoded_password_string
    hardcoded_password_funcarg = pysecanalyzer.srcplugins.general_hardcoded_password:hardcoded_password_funcarg
    hardcoded_password_default = pysecanalyzer.srcplugins.general_hardcoded_password:hardcoded_password_default

    # pysecanalyzer/srcplugins/general_hardcoded_tmp.py
    hardcoded_tmp_directory = pysecanalyzer.srcplugins.general_hardcoded_tmp:hardcoded_tmp_directory

   	# pysecanalyzer/srcplugins/injection_sql.py
    hardcoded_sql_expressions = pysecanalyzer.srcplugins.injection_sql:hardcoded_sql_expressions
	
	# pysecanalyzer/srcplugins/injection_wildcard.py
    linux_commands_wildcard_injection = pysecanalyzer.srcplugins.injection_wildcard:linux_commands_wildcard_injection

    # pysecanalyzer/srcplugins/weak_cryptographic_key.py
    weak_cryptographic_key = pysecanalyzer.srcplugins.weak_cryptographic_key:weak_cryptographic_key

    # pysecanalyzer/srcplugins/yaml_load.py
    yaml_load = pysecanalyzer.srcplugins.yaml_load:yaml_load
    
[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  examples*
